# shipyard

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  architect  shipyard.db-shm  shipyard.db-wal
scripts/: architect  architect-prompt.md
src/: agents.rs  brain.rs  chat.rs  config.rs  db.rs  knowledge.rs  log_parser.rs  main.rs  projects.rs  recon.rs  supervisor.rs  tasks.rs  ws.rs
www/: index.html  manifest.json  sw.js
