[package]
name = "shipyard"
version = "0.1.0"
edition = "2024"
description = "Phone-first AI engineering manager"
license = "MIT"

[dependencies]
# Web server
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.33", features = ["bundled"] }

# Git
octocrab = "0.43"

# Process management
nix = { version = "0.30", features = ["signal", "process"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
